assets/css/style.css
body {
    margin: 0 auto;
    font-family: "Open Sans", sans-serif;
    color: #261C18;
    position: relative;
}

/*headings*/

h1, h2, h3, h4, h5, h6 {
    font-family: "Poppins", sans-serif;
    text-align: center;
}

/* Buttons*/

.btn-style {
    padding: 8px 12px 8px 12px;
    margin-top: 15px;
    border-radius: 5px;
    border: none;
    font-family: "Poppins", sans-serif;
}

/* Background colours */

.bg--h{
    background-color: #F9FAFC;
}

.bg--grey{ 
    background-color: #D0D7D9;
}

.bg--dark{
    background-color: #262221;
}

.bg--brown{
    background-color: #986D32;
}

.bg--beige{
    background-color: #BFB6AE;
}
.bg--whiskey{  
    background-color:#D99E6A;
}

.bg--blue{
    background-color: #3aabc3;
}

.bg--green{
    background-color: #71bf75;
}
.bg--white{
    background-color:#faf9f9;
}

/*Text colors*/

.txt--dark{
    color: #262221;
}

.txt--brown{
    color: #986D32;
}

.txt--white{
    color: #fffefd;
}

/*border colors*/

b-white{
border-color: #faf9f9;
}
.b{
border: 1px solid red;
}

/*Section sizing */

.section-layout {
    position: relative;
}

/*anchors*/
/*https://www.caktusgroup.com/blog/2017/10/23/css-tip-fixed-headers-and-section-anchors/*/
.anchors{
  display: block;
  position: absolute;
  top: -77px; 
  z-index: 5;
  visibility: hidden;
}

/* Headings & Subheadings formatting*/

.section-heading{
    text-align: center;
    text-transform: uppercase;
    font-weight: 500;
    padding-top: 30px;
}
.section-divider{
    width: 80px;
    height: 3px;
    margin-bottom: 30px;
}
.bottom-padding{
    padding-bottom: 28px;
}

/* Background image common feature */

.bg-img{
    background-repeat: no-repeat;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    overflow: hidden;
    position: relative;
}

/* Nav bar */

.navbar{
    height: 78px;
    align-items: stretch;
}

button.navbar-toggler {
  border: 0px;
  padding: 0px 15px 0px 15px;
}

.toggle-btn{
    font-size:28px;
    padding: 0px;
    height: initial;
}
           
.navbar a{
    color: inherit;
    text-decoration: none;
    font-size: 95%;
    font-weight: 300;  
    text-align: center; 
    padding-top: 12px;
    padding-bottom: 12px; 
}

a.navbar-brand{
    font-family: "Poppins", sans-serif;
    font-size: 22px;
    font-weight: 500;
    letter-spacing: 2px;
    padding: 0px 0px 0px 15px;
}

.navbar .active{
    text-decoration: underline;
    color: inherit;
    font-weight: 700;
    background-color: inherit;
}
/* end Navbar */

/* Hero image & jumbotron */

/*code w3cschool on how to do hero image, changed to linear gradient added to right, changed the rgba transparency*/

.hero-background{
    height: 100vh;
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url("../images/cat_hero.jpg");
    background-position-x: 70%;
    background-position-y: center;
}

.jumbotron-container{
    background: transparent; 
    position: absolute;
    width: 100%;
    text-align: center;
    font-family: "Poppins", sans-serif;
    margin: 0 auto;
    left: 0px;
    bottom: 0px;
    padding-bottom: 40px;
}

/*Flexible font size --> https://css-tricks.com/how-do-you-do-max-font-size-in-css/*/

.p-jumbotron{
    margin-bottom: 0px;
    font-size: clamp(18px, 2.2vmax, 34px);
}

.hr-jumbotron{
    width: 25px;
    height: 1px;
    margin-bottom: 12px;
    margin-top: 8px;
}

.h-jumbotron{
    margin-bottom: 0px;
    font-size: clamp(28px, 3.5vmax, 54px);
}

.p-promo{
    font-size: clamp(11px, 1.3vmax, 18px);
    padding-top: 30px;
    margin-bottom: 8px;
}

/* Services section */

.p-intro{
    text-align: center;
}
.p-intro span{
    font-weight: 700;
}
.serv-list{
    display: flex;
    justify-content: center;
}
.list-content{
    display: flex;
}
.serv-list li span{
    padding-right: 5px;
    color: #986D32;
}
.price-container{
    justify-content: space-around;
    align-content: space-around;
    padding: 0px 15px;
}
.price-box{
    font-family: "Poppins", sans-serif;
    font-weight: 600;
    border-radius: 5px;
    background-color: rgba(0, 0, 0, 0.5);
    color:  #faf9f9;
    height: 6em;
    margin-bottom: 12px;
    padding: 18px 0 0 0;
}
.price-img1{
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2)), url("../images/cat-1.jpg");
    background-position-x: center;
    background-position-y: center;
}
.price-img2{
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.1)), url("../images/cat2.jpg");
    background-position-x: center;
    background-position-y: center;
}
.price-img3{
    background-image: linear-gradient(to top, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.3)), url("../images/cat3.jpg");
    background-position-x: center;
    background-position-y: center;
}
.cont-col{
    display: flex;
    justify-content: center;
}

/* end service section */

/*About me section*/

.portrait{
    background-image: url("../images/portrait1.jpg");
    background-position-x: left;
    background-position-y: top;
    min-height: 49vw;
}

.profile{
    padding-top: 8px;
    padding-left: 10px;
    padding-right: 10px;
    padding-bottom: 20px;
    text-align: justify;
    text-justify: inter-word;
}
.flex-container{
    justify-content: space-evenly;
    align-content: space-evenly;
    margin: 0px 0px 10px 0px;
    padding: 0px 0px 28px 0px;
}
.flex-item{
    flex: 0 0 30%;
    max-width: 120px;
    padding: 0px;
    margin: 0px;
}

/*https://www.w3schools.com/howto/howto_css_aspect_ratio.asp*/
.box-size{
    width: 100%;
    padding-top: 100%;
    background-color: #e4ddd6;
    position: relative;
    border-radius: 50%;
}

/*https://medium.com/front-end-weekly/absolute-centering-in-css-ea3a9d0ad72e*/
.text{
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    display: block;
}
.text h6{
    font-weight: 600;
}
/* end of about me section */

/*Testimonials section*/

.flickity-viewport {
    overflow: hidden;
    position: relative;
    height: 100%;
    margin-top: 15px;
}

* { 
    box-sizing: border-box;
}

.carousel {
   background: white;
   height: 100%;
   margin: 0 60px;
}

.carousel-cell {
  width: 100%;
  margin-right: 3.5%;
  padding: 5px;
}

.testimonial1{
    background-image: url("../images/testimonial1.jpg");
}

.testimonial2{
    background-image: url("../images/testimonial2.jpg");
}

.testimonial3{
    background-image: url("../images/testimonial3.jpg");
}

.testimonial4{
    background-image: url("../images/testimonial4.jpg");
}

.testimonial5{
    background-image: url("../images/testimonial5.jpg");
}

.img {
    display: block;
    width: 100px;
    height: 100px;
    background-position-x: center;
    background-position-y: center;
    margin: 0 auto;
    margin-bottom: 15px;
    border-radius: 50%;
    -webkit-border-radius: 50%;	
    -moz-border-radius: 50%;
    -o-border-radius: 50%;
    -ms-border-radius: 50%;
}

.testimonial-text{
    text-align: justify;
    text-justify: inter-word;
}

/* smaller, dark, rounded square */
/*
https://flickity.metafizzy.co/style.html
https://codepen.io/desandro/pen/zxRYMP
Change to button colours and position
*/
.flickity-prev-next-button {
    width: 30px;
    height: 30px;
    border-radius: 5px;
    background: #262221;
}
.flickity-prev-next-button:hover {
    background: #D99E6A;
}
/* arrow color */
.flickity-prev-next-button .arrow {
    fill: white;
}
.flickity-prev-next-button.no-svg {
    color: white;
}
/* position outside */
.flickity-prev-next-button.previous {
    left: -40px;
    top: 55px;
}
.flickity-prev-next-button.next {
    right: -40px;
    top: 55px;
}
/* carousel dots */
.flickity-page-dots {
    position: initial;
}
/* end testimonials */

/* Areas we cover section */
.container-list{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.container-list p{
    text-align: center;
}
.area-list{
   padding-left: 0px;
}
.area-list li{
    list-style-position: inside;
}
.col-map{
    padding-left: 0px;
    padding-right: 0px;
}

.map-frame {
    min-height: 55vh;
    height: 100%;
    background-color: #f2f6f9;
}
/* end area we cover section*/

/* Contact us section */

.contdetails{  
    padding-top: 15px;
    padding-bottom: 25px;
}
.contdetails li{
padding-left: 10px;
}
.cont-i{
    font-size: 18px;
}
.social-media-i{
    font-size: 22px;
}
.form-container{
padding-bottom: 20px;
padding-top: 8px;
}
form{
    margin: 0 auto;
    /*padding-top: 50px;*/
}
/* end contact us section*/

/* Footer */

footer{
    margin: 0 auto;
    padding-top: 30px;
    text-align: center;
}
.ft-left{
    margin-bottom: 15px;
}
.ft-right{
    margin-bottom: 10px;
}
.footer-headings{
    font-weight: 500;
}
.sm-icons{
    font-size: 25px;
    letter-spacing: 3px;
    padding: 0px;
}
/*end footer */


/* Media queries */

/* x small to medium screen*/
/*https://stackoverflow.com/questions/23897946/how-do-i-combine-two-media-queries/23898019*/
@media only screen and (min-width: 450px) and (max-width: 767px), only screen and (min-width: 1000px){
/* Area we cover */
.container-list{
    max-width: 100%;
}
/*https://www.w3schools.com/cssref/css3_pr_columns.asp
https://www.w3schools.com/cssref/css3_pr_column-gap.asp
*/
.area-list{
    column-count: 2;
    -moz-column-count: 2;
    -webkit-column-count: 2;
    column-gap: 20px;
    -moz-column-gap: 20px;
    -webkit-column-gap: 20px;
}
}
/* small size to large screen */

@media only screen and (min-width: 577px) and (max-width: 991px) {
/* carousel  */
.carousel-cell {
    width: 47%;
}
}

/*small to medium screen*/

@media only screen and (min-width: 577px) and (max-width: 767px) {
/*services*/
.price-box{
flex: 0 0 31%;
max-width: 31%;
}

}

/* medium screen */

@media only screen and (min-width: 768px) {
/* list */
li{
    line-height: 2;
}
/* navbar */
.navbar-collapse{
    padding-right: 15px;
}
#navbarNavDropdown{
    align-items: flex-end;
}
/* service section */
.price-container{
justify-content: space-around;
height: 100%;
}
.price-box{
flex: 0 0 240px;
max-width: 240px;
min-width: 240px;
}
/*about me section*/
.md-reverse{
    flex-direction: row-reverse;
}
.portrait{
    min-height: 100%;
}
/* Contact us */
.contdetails{
width: 80%;
}
form{
width: 80%;
}
/* footer */
.ft-left{
    text-align: left;
    padding-left: 3%;
    margin-bottom: 10px;
}
.ft-right{
    display: flex;
    justify-content: flex-end;
    padding-right: 3%;
}
.ft-right-element{
    flex-basis: initial;
}
}
/* medium to large screen */

@media only screen and (min-width: 768px) and (max-width: 860px) {
/* about me*/
.flex-item{ 
    max-width: 105px;
}
}

/* large screen */

@media only screen and (min-width: 992px) {
/* carousel */
.carousel-cell{
width: 31%;
}
/*about me section*/
.profile{
    padding-top: 2%;
    padding-left: 8%;
    padding-right: 8%;
    /*padding-bottom: 8%;*/
}
}

/*extra large screen*/

@media only screen and (min-width: 1200px) {
/* hero image */
.hero-background{
    height: 100vh;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0)), url("../images/cat_hero.jpg");
   }
.jumbotron-container{
    max-width: 700px;
    bottom: 25vh;
}
/* about me*/
.flex-container{
padding-right: 15px;
padding-left: 15px;
}
.flex-item{
max-width: 137px;
}
}

